version/0.20/_sources/api/solver/_autosummary/settings/turbulent_kinetic_energy.rst.txt
:orphan:

.. _turbulent_kinetic_energy:

turbulent_kinetic_energy
========================

.. autoclass:: ansys.fluent.core.solver.settings_241.turbulent_kinetic_energy.turbulent_kinetic_energy
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_8>`                 Specify how the boundary condition will be defined.

:ref:`value <value_4>`                              Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`turbulence <turbulence>`       Help not available.

==============================   =======================

